# Uniscene_demo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  ckpt  data  environment.yml  install.md  pyproject.toml
data_process/: config-200.yaml  config-800.yaml  generate_occ.py  generate_occ_mini.py  nuscenes.yaml  scene_error_nksr.txt  scene_nksr.txt
lidar_gen/: README.md  convert_nuscenes_info.py  environment.yml  requirements.txt  setup.py  visualize_nuscenes_lidar.py
lidar_gen/pcdet/: version.py
lidar_gen/tools/: _init_path.py  demo.py  infer.py  test.py  train.py
occupancy_gen/: README.md  check_mayavi.py  dataload_util.py  download.py  eval_OccDiT.py  map_visualizer.py  read_occ_nksr.py  requirements.txt  run_eval_dit.sh  run_eval_dit_mini.sh  run_gen_bev_mini.sh  run_train_dit.sh  run_train_dit_mini.sh  save_bev_layout.py  train_OccDiT.py  train_OccVAE.py  visualize_nuscenes_occupancy.py
occupancy_gen/12hz_processing/: eval_12hz_with_occ3d.py  occgen_12hz.sh  save_bevlayout_12hz.py
occupancy_gen/config/: save_step2_me.py  train_ae_eval.py  train_vae_4_DwT_L_me.py
occupancy_gen/dataset/: __init__.py  dataset.py  dataset_wrapper.py  sampler.py
occupancy_gen/diffusion/: __init__.py  bev_cod.py  diffusion_utils.py  embedder.py  gaussian_diffusion.py  models.py  respace.py  timestep_sampler.py
occupancy_gen/loss/: __init__.py  base_loss.py  ce_loss.py  emb_loss.py  multi_loss.py  plan_reg_loss_lidar.py  recon_loss.py
occupancy_gen/model_vae/: __init__.py
video_gen/: README.md  bin_to_st.py  inference_video.py  init_proj_path.py  requirements.txt  sample_utils.py  train.py
(+159 files in other folders)
