[project]
package-mode = false
name = "uniscene"
version = "0.1.0"
description = ""
authors = [
    {name = "chenxiwu",email = "chenxiwu@megvii.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "torch (==2.5.1)",
    "deepspeed (==0.10.1)",
    "einops (>=0.6.1)",
    "fsspec (>=2023.6.0)",
    "numpy (==1.20.1)",
    "omegaconf (>=2.3.0)",
    "open-clip-torch (>=2.20.0,<3.0.0)",
    "pillow (>=9.5.0)",
    "pytorch-lightning (==2.0.1)",
    "pyyaml (==6.0.1)",
    "streamlit (>=0.73.1)",
    "tensorboardx (==2.6)",
    "timm (>=0.9.2,<0.10.0)",
    "tokenizers (==0.12.1)",
    "tqdm (>=4.65.0)",
    "transformers (==4.19.1)",
    "urllib3 (>=1.25.4,<1.27)",
    "accelerate (==0.20.3)",
    "array-record (==0.4.0)",
    "arrow (==1.3.0)",
    "asttokens (==2.4.1)",
    "astunparse (==1.6.3)",
    "async-timeout (==4.0.3)",
    "awscli (==1.32.109)",
    "xformers (>=0.0.22,<0.1.0)",
    "scipy (>=1.9,<2.0)",
    "diffusers (==0.27.2)",
    "llvmlite (==0.36)",
    "mmcv (==2.1.0)",
    "mmengine (==0.8.4)",
    "mmdet (==3.3.0)",
    "mmdet3d (==1.4.0)",
    "pyopengl (==3.1.0)",
    "pyvirtualdisplay (==3.0)",
    "xvfbwrapper (>=0.2.9,<0.3.0)",
    "configobj (==5.0.8)",
    "natsort (==8.4.0)",
    "kornia (==0.6.9)",
    "jaxtyping (>=0.2.36,<0.3.0)",
    "spconv-cu120 (>=2.3.6,<3.0.0)",
    "vtk (==9.0.2)",
    "pyqt5 (==5.15.10)",
    "setuptools (==65.5.0)",
]
